--- a/contact.html
+++ b/contact.html
@@ -112,10 +112,10 @@
               </ul>
             </li>
             <li>
-            <!--  <a href="port.html">Portfólio</a> -->
+              <!--  <a href="port.html">Portfólio</a> -->
             </li>
             <li>
-                <a href="blog">Blog</a>
+              <a href="blog">Blog</a>
             </li>
             <li>
               <a href="contact.html">Contato</a>
@@ -152,7 +152,8 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contato</h3>
-          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos em 24h no máximo</p>
+          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
+            em 24h no máximo</p>
         </div>
       </div>
 
@@ -177,10 +178,14 @@
 
               <div>
                 <i class="fa fa-phone"></i>
-                <p>Telefone: (61) 3107-1036 <br>
-                  Diretor de Comercial (Marcos) (61) 9 8165-7690<br>
-             </p>
-             <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561981657690&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp<br> clicando aqui <br></a>
+                <p>Telefone: (61) 3107-1036
+                  <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
+                  <br>
+                </p>
+                <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561981657690&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <br> clicando aqui
+                  <br>
+                </a>
               </div>
             </div>
 
@@ -202,8 +207,7 @@
             <div class="form">
               <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" 
-                  />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
@@ -212,12 +216,12 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto"
-                  />
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!" placeholder="Digite aqui sua mensagem"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
+                    placeholder="Digite aqui sua mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
                 <div class="text-center">
@@ -225,11 +229,11 @@
                 </div>
               </form>
             </div>
-          
+
+
+          </div>
 
         </div>
-
-      </div>
     </section>
     <!-- #contact -->
 
@@ -296,23 +300,22 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
-  <script>
-      function initMap() {
-        var uluru = {lat: -15.765883, lng: -47.872137};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 20,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-    </script>
-  <script defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5a98b722d7591465c7082c8c/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
   </script>
-<script async src="js/google_map.js"></script>
+  <!--End of Tawk.to Script-->
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+  </script>
+  <script async src="js/google_map.js"></script>
 </body>
 
 </html>
