--- a/instalacoes/normas.html
+++ b/instalacoes/normas.html
@@ -113,10 +113,10 @@
               </ul>
             </li>
             <li>
-                <!-- <a href="../port.html">Portfólio</a> -->
+              <!-- <a href="../port.html">Portfólio</a> -->
             </li>
             <li>
-                <a href="../blog">Blog</a>
+              <a href="../blog">Blog</a>
             </li>
             <li>
               <a href="../contact.html">Contato</a>
@@ -236,7 +236,8 @@
                 </h4>
                 <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
                   gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
-                  utilizamos.</p>
+                  utilizamos.
+                </p>
               </div>
             </div>
           </center>
@@ -309,31 +310,32 @@
       <i class="fa fa-chevron-up"></i>
     </a>
 
-   <!-- JavaScript Libraries -->
-   <script src="../lib/jquery/jquery.min.js"></script>
-   <script src="../lib/jquery/jquery-migrate.min.js"></script>
-   <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-   <script src="../lib/easing/easing.min.js"></script>
-   <script src="../lib/wow/wow.min.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+    <!-- JavaScript Libraries -->
+    <script src="../lib/jquery/jquery.min.js"></script>
+    <script src="../lib/jquery/jquery-migrate.min.js"></script>
+    <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-   <script src="../lib/waypoints/waypoints.min.js"></script>
-   <script src="../lib/counterup/counterup.min.js"></script>
-   <script src="../lib/superfish/hoverIntent.js"></script>
-   <script src="../lib/superfish/superfish.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/counterup/counterup.min.js"></script>
+    <script src="../lib/superfish/hoverIntent.js"></script>
+    <script src="../lib/superfish/superfish.min.js"></script>
 
-   <!-- Contact Form JavaScript File -->
-   <script src="../contactform/contactform.js"></script>
+    <!-- Contact Form JavaScript File -->
+    <script src="../contactform/contactform.js"></script>
 
-   <!-- Template Main Javascript File -->
-   <script src="../js/main.js"></script>
+    <!-- Template Main Javascript File -->
+    <script src="../js/main.js"></script>
+
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
       (function () {
         var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
         s1.async = true;
-        s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
+        s1.src = 'https://embed.tawk.to/5a98b722d7591465c7082c8c/default';
         s1.charset = 'UTF-8';
         s1.setAttribute('crossorigin', '*');
         s0.parentNode.insertBefore(s1, s0);
