--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <!--==========================
     Call To Action Section
     ============================-->
-    <section id="call-to-action">
+    <section id="call-to-action" style="background: white">
       <div class="container wow fadeIn">
         <div class="row">
           <h2 style="color:black; position: relative; left:3%;">Projeto de Energia Solar Off-Grid</h2>
