pagina do simulador

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -273,9 +273,102 @@
       </div>
       </div>
     </section>
-    <!-- #contact -->
 
+    <!--==========================
+    Call To Action Section
+    ============================-->
+    <section id="call-to-action" style="background: white">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <h2 style="color:black; position: relative; left:3%;">Projeto de Energia Solar Off-Grid</h2>
+          <div class="col-lg-7 text-center text-lg-left">
+            <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media"
+              allowf ullscreen></iframe>
+          </div>
+          <div class="col-lg-4 cta-btn-container text-center">
+            <p style="color:black; text-align: justify;">
+              Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a partir do sol e armazena em baterias para
+              ser usada de noite, pois, no local onde mora, a CEB não disponibiliza acesso à energia elétrica. Nos últimos
+              meses, o sistema começou a dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe
+              conseguiu ter sucesso no projeto levantando todos os problemas que o sistema tinha, contribuindo para o cliente
+              ter o conforto e a rotina de antes.
+
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- #contact -->
+    <section id="facts" style="background: #efefef;">
+      <div class="container wow fadeIn">
+        <div class="section-header">
+          <h3 class="section-title">Como funciona para economizar com placas solares?</h3>
+          <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
+        </div>
+        <div class="row counters">
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">7</span>
+            <p>Metros quadrados diponíveis</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">55</span>
+            <p>% de economia na conta de luz</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">1,000</span>
+            <p>Reais economizados só no primeiro ano</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">4</span>
+            <p>Anos de payback</p>
+          </div>
+
+        </div>
+
+
+
+      </div>
+      <br>
+      <br>
+      <br>
+      <center>
+        <p> Sua casa consome muito mais ou muito menos? Experimente nosso simulador gratuito </p>
+        <p>
+          <a href="simulador/index.html" class="cta-btn">Simulador</a>
+        </p>
+      </center>
+    </section>
+    <!-- #facts -->
+
+
+    <section id="call-to-action" style="background: white">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <h2 style="color:black; position: relative; left:3%;">Saiba mais sobre energia solar               </h2>
+          <div class="col-lg-7 text-center text-lg-left">
+            <img src="../assets/macbook.jpg"/>
+
+          <a href="#" class="cta-btn" style="position:relative; left:20%">Baixar Aqui</a>
+          </div>
+          <div class="col-lg-4 cta-btn-container text-center">
+            <p style="color:black; text-align: justify;">
+              Para mais informações, <a href="#">baixe nosso e-book gratuito </a> de Energia Solar Fotovoltaica. Aprenda sobre tipos de placas solares e tipos de instalações que podem ser feitas, seus benefícios e o tempo de payback estimado.
+          
+            </p>
+            
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
+
 
   <!--==========================
   Footer
