--- a/simulador/index.html
+++ b/simulador/index.html
@@ -354,11 +354,11 @@
           <div class="col-lg-7 text-center text-lg-left">
             <img src="../assets/macbook.jpg"/>
 
-          <a href="#" class="cta-btn" style="position:relative; left:20%">Baixar Aqui</a>
+          <a href="../landing3/index.html" class="cta-btn" style="position:relative; left:20%">Baixar Aqui</a>
           </div>
           <div class="col-lg-4 cta-btn-container text-center">
             <p style="color:black; text-align: justify;">
-              Para mais informações, <a href="landing3/index.html">baixe nosso e-book gratuito </a> de Energia Solar Fotovoltaica. Aprenda sobre tipos de placas solares e tipos de instalações que podem ser feitas, seus benefícios e o tempo de payback estimado.
+              Para mais informações, <a href="../landing3/index.html">baixe nosso e-book gratuito </a> de Energia Solar Fotovoltaica. Aprenda sobre tipos de placas solares e tipos de instalações que podem ser feitas, seus benefícios e o tempo de payback estimado.
           
             </p>
             
