--- a/simulador/index.html
+++ b/simulador/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta property=”og:image”content=”http://enetec.unb.br/img/hero-bg.jpg“/>
+<meta property="og:image" content="http://enetec.unb.br/img/hero-bg.jpg">
   <title>ENETEC - Simulador Solar</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="energia, sustentável, economia, solar, sistema, projeto,fotovoltaico, investimento" name="keywords">
