--- a/simulador/index.html
+++ b/simulador/index.html
@@ -247,10 +247,13 @@
                   <p id="texto-custo">
                   </p>
                   <h3>
-                    Gráfico de kWh x mês
+                    Gráfico de kWh gerados por mês
                   </h3>
                   <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
                   </canvas>
+                  <p id="consumo-dinheiro">
+                    
+                  </p>
                   <p>
                     Lembrando que essas medidas são uma estimativa
                   </p>
