--- a/simulador/index.html
+++ b/simulador/index.html
@@ -280,9 +280,11 @@
                   <p>
                     Lembrando que essas medidas são uma estimativa
                   </p>
+                  <button class="cta-btn">
                   <a href="../contact/index.html">
-                    Para um projeto exato, fale conosco!
+                    Para um projeto personalizado, fale conosco!
                   </a>
+                  </button>
                 
                 </div>
               </div>
