--- a/simulador/index.html
+++ b/simulador/index.html
@@ -276,11 +276,10 @@
                   <p>
                     Lembrando que essas medidas são uma estimativa
                   </p>
-                  <button class="cta-btn">
-                  <a href="../contact/index.html">
+                  <a class="cta-btn" href="../contact/index.html">
                     Para um projeto personalizado, fale conosco!
                   </a>
-                  </button>
+                 
                 
                 </div>
               </div>
@@ -366,6 +365,7 @@
       <center>
         <p> Sua casa consome muito mais ou muito menos? Experimente nosso simulador gratuito </p>
         <p>
+          <br>
           <a href="simulador/index.html" class="cta-btn">Simulador</a>
         </p>
       </center>
