--- a/simulador/index.html
+++ b/simulador/index.html
@@ -220,7 +220,7 @@
                           required/>
                       </div>
                       <div class="wrap-input2 validate-input">
-                        <input id="cons" class="input2" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone(opcional)"
+                        <input id="cons" class="input2" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone" required
                         />
                       </div>
                       <div class="container-contact2-form-btn">
