Comparação entre fotovoltaica e poupança

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -261,8 +261,13 @@
                         </tr>
           
                         <tr class="row100">
-                          <td class="column100 column1" data-column="column1">O Dinheiro economizado em 1 ano é de</td>
+                          <td class="column100 column1" data-column="column1">Dinheiro recebido em 30 anos</td>
                           <td class="column100 column8" data-column="column8" id="consumo-dinheiro"></td>
+                        </tr>
+
+                        <tr class="row100">
+                          <td class="column100 column1" data-column="column1">Dinheiro recebido se aplicado o mesmo investimento na poupança</td>
+                          <td class="column100 column8" data-column="column8" id="poupanca"></td>
                         </tr>
           
                       </tbody>
