--- a/index.html
+++ b/index.html
@@ -134,11 +134,9 @@
   <section id="hero">
     <div class="hero-container">
 
-      <img src="img/logo-header.png">
-      <h2>Você precisa de economia de energia? </h2>
-      <p>
-        <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
-      </p>
+     <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC <br> Consultoria Júnior</h1>
+      <h2 style="font-family: 'montserrat-medium', sans-serif; color: white;">Você precisa de economia de energia? </h2>
+     
     </div>
   </section>
   <!-- #hero -->
@@ -148,7 +146,7 @@
       Facts Section
       ============================-->
     <section id="facts">
-      <div class="container wow fadeIn">
+      <div class="container wow fadeIn"><a href=""></a>
         <div class="section-header">
           <h3 class="section-title">Como funciona para economizar com placas solares?</h3>
           <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
