--- a/instalacoes/normas.html
+++ b/instalacoes/normas.html
@@ -204,7 +204,7 @@
               </h4>
               <p class="description">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="../contact.html">Fale conosco</a>
               </p>
             </div>
           </div>
@@ -257,7 +257,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco
-              <a href="">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
+              <a href="../contact.html">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <p>
