--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -288,7 +288,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco
-              <a href="">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
+              <a href="../contact.html">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <p>
