--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     Hero Section
     ============================-->
   <section id="hero">
-    <div class="hero-container">
+    <div class="hero-container" style="text-align: left;">
 
      <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC <br> Consultoria Júnior</h1>
       <h2 style="font-family: 'montserrat-medium', sans-serif; color: white;">Você precisa de economia de energia? </h2>
