--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
   <section id="hero">
     <div class="hero-container" style="text-align: left;">
 
-     <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC <br> Consultoria Júnior</h1>
+      <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC
+        <br> Consultoria Júnior</h1>
       <h2 style="font-family: 'montserrat-medium', sans-serif; color: white;">Você precisa de economia de energia? </h2>
-     
+
     </div>
   </section>
   <!-- #hero -->
@@ -146,7 +147,8 @@
       Facts Section
       ============================-->
     <section id="facts">
-      <div class="container wow fadeIn"><a href=""></a>
+      <div class="container wow fadeIn">
+        <a href=""></a>
         <div class="section-header">
           <h3 class="section-title">Como funciona para economizar com placas solares?</h3>
           <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
@@ -321,13 +323,13 @@
     <!--==========================
     Call To Action Section
     ============================-->
- <section id="call-to-action" style="background: white">
+    <section id="call-to-action" style="background: white">
       <div class="container wow fadeIn">
         <div class="row">
           <h2 style="color:black; position: relative; left:3%;">Projeto de Energia Solar Off-Grid</h2>
           <div class="col-lg-7 text-center text-lg-left">
             <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media"
-              allowf   ullscreen></iframe>
+              allowf ullscreen></iframe>
           </div>
           <div class="col-lg-4 cta-btn-container text-center">
             <p style="color:black; text-align: justify;">
@@ -390,8 +392,6 @@
           <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
           <script src="lib/easing/easing.min.js"></script>
           <script async src="lib/wow/wow.min.js"></script>
-          <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
-
           <script async src="lib/waypoints/waypoints.min.js"></script>
           <script async src="lib/counterup/counterup.min.js"></script>
           <script async src="lib/superfish/hoverIntent.js"></script>
