--- a/index.html
+++ b/index.html
@@ -143,6 +143,96 @@
   <!-- #hero -->
 
   <main id="main">
+
+
+    <section id="call-to-action" style="background: white">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <div class="section-header">
+          <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Projeto de Energia Solar Off-Grid</h3>
+        </div>
+          <div class="col-lg-7 text-center text-lg-left">
+            <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media"
+              allowf ullscreen></iframe>
+          </div>
+          <div class="col-lg-4 cta-btn-container text-center">
+            <p style="color:black; text-align: justify;">
+              Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a partir do sol e armazena em baterias para
+              ser usada de noite, pois, no local onde mora, a CEB não disponibiliza acesso à energia elétrica. Nos últimos
+              meses, o sistema começou a dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe
+              conseguiu ter sucesso no projeto levantando todos os problemas que o sistema tinha, contribuindo para o cliente
+              ter o conforto e a rotina de antes.
+
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!--==========================
+      Services Section
+      ============================-->
+    <section id="services" style="background: rgb(31,141,211)">
+      <div class="container wow fadeIn">
+        <div class="section-header">
+          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
+          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+        </div>
+
+        <div class="card-group">
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
+            <div class="card-body">
+              <h5 class="card-title">Placas Solares</h5>
+              <p class="card-text">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sistema de energia solar
+                fotovoltaico eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua
+                própria energia em casa.</p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Instalações Elétricas</h5>
+              <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
+                e a estabilidade energética do local. Quer reformar a sua casa?
+                <a href="">Fale conosco</a>
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Eficiência Energética</h5>
+              <p class="card-text">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
+                gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
+                utilizamos.
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
+              <p class="card-text">A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários! Fale conosco.
+                Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
+
+
+              </p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Termografia</h5>
+              <p class="card-text">Utilizamos uma câmera que mede temperatura para ver se há fuga de corrente ou sobrecaga em um cabo ou disjuntor,
+                para que façamos um lauro de instalações. Assim, evitaremos acidentes que podem ser perigosos.
+              </p>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!-- #services -->
+
     <!--==========================
       Facts Section
       ============================-->
@@ -191,74 +281,6 @@
       </center>
     </section>
     <!-- #facts -->
-
-
-    <!--==========================
-      Services Section
-      ============================-->
-    <section id="services" style="background: rgb(163, 163, 163);">
-      <div class="container wow fadeIn">
-        <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
-        </div>
-        <div class="row">
-          <div class=".col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon">
-                <a href="">
-                  <i class="fa fa-plug"></i>
-                </a>
-              </div>
-              <h4 class="title">
-                <a href="">Instalações Elétricas</a>
-              </h4>
-              <p class="description">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
-                e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon">
-                <a href="">
-                  <i class="fa fa-sun-o"></i>
-                </a>
-              </div>
-              <h4 class="title">
-                <a href="">Placa solares</a>
-              </h4>
-              <p class="description">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sstema de eergia solar fotovoltaico
-                eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua própria energia
-                em casa.</p>
-            </div>
-          </div>
-          <center>
-            <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-              <div class="box">
-                <div class="icon">
-                  <a href="">
-                    <i class="fa fa-line-chart"></i>
-                  </a>
-                </div>
-                <h4 class="title">
-                  <a href="">Eficiência Energética</a>
-                </h4>
-                <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
-                  gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
-                  utilizamos.
-                </p>
-              </div>
-            </div>
-          </center>
-
-
-        </div>
-
-      </div>
-    </section>
-    <!-- #services -->
 
     <!--==========================
       About Us Section
@@ -320,31 +342,7 @@
     </section>
     <!-- #about -->
 
-    <!--==========================
-    Call To Action Section
-    ============================-->
-    <section id="call-to-action" style="background: white">
-      <div class="container wow fadeIn">
-        <div class="row">
-          <h2 style="color:black; position: relative; left:3%;">Projeto de Energia Solar Off-Grid</h2>
-          <div class="col-lg-7 text-center text-lg-left">
-            <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media"
-              allowf ullscreen></iframe>
-          </div>
-          <div class="col-lg-4 cta-btn-container text-center">
-            <p style="color:black; text-align: justify;">
-              Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a partir do sol e armazena em baterias para
-              ser usada de noite, pois, no local onde mora, a CEB não disponibiliza acesso à energia elétrica. Nos últimos
-              meses, o sistema começou a dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe
-              conseguiu ter sucesso no projeto levantando todos os problemas que o sistema tinha, contribuindo para o cliente
-              ter o conforto e a rotina de antes.
 
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </section>
 
 
     <!--==========================
