--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <a href="blog">Blog</a>
             </li>
             <li>
-              <a href="contact.html">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
         </ul>
       </nav>
@@ -145,12 +145,15 @@
   <main id="main">
 
 
+
+
+
     <section id="call-to-action" style="background: white">
       <div class="container wow fadeIn">
         <div class="row">
           <div class="section-header">
-          <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Projeto de Energia Solar Off-Grid</h3>
-        </div>
+            <h3 class="section-title" style="color:black; position: relative; margin-bottom: 15px;">Projeto de Energia Solar Off-Grid</h3>
+          </div>
           <div class="col-lg-7 text-center text-lg-left">
             <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media"
               allowf ullscreen></iframe>
@@ -186,7 +189,7 @@
               <h5 class="card-title">Placas Solares</h5>
               <p class="card-text">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sistema de energia solar
                 fotovoltaico eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua
-                própria energia em casa.</p>
+                própria energia.</p>
             </div>
           </div>
           <div class="card icon-services">
@@ -341,78 +344,161 @@
       </div>
     </section>
     <!-- #about -->
-
-
-
-
     <!--==========================
-    Footer
-    ============================-->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-
-          <!--==========================
-      Footer
+      Contact Section
       ============================-->
-          <footer id="footer">
-            <div class="footer-top">
-              <div class="container">
+    <section id="contact">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h3 class="section-title">Contato</h3>
+          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
+            em 24h no máximo</p>
+        </div>
+      </div>
 
+
+      <div class="container wow fadeInUp">
+        <div class="row justify-content-center">
+
+          <div class="col-lg-3 col-md-4">
+
+            <div class="info">
+              <div>
+                <i class="fa fa-map-marker"></i>
+                <p>
+                  <br> Brasília DF UnB SG-11 - AT 3/4
+                </p>
+              </div>
+
+              <div>
+                <i class="fa fa-envelope"></i>
+                <p>contato@enetec.unb.br</p>
+              </div>
+
+              <div>
+                <i class="fa fa-phone"></i>
+                <p>Telefone: (61) 3107-1036
+                  <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
+                  <br>
+                </p>
+                <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                  <br> clicando aqui
+                  <br>
+                </a>
               </div>
             </div>
 
+            <div style="position: relative; left: 22.5%;" class="social-links">
+              <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
+                <i class="fa fa-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/enetec" class="instagram">
+                <i class="fa fa-instagram"></i>
+              </a>
+              <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
+                <i class="fa fa-linkedin"></i>
+              </a>
+            </div>
+
+          </div>
+
+          <div class="col-lg-5 col-md-8">
+            <div class="form">
+              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
+                  />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
+                    placeholder="Digite aqui sua mensagem"></textarea>
+                  <div class="validation"></div>
+                </div>
+                <div class="text-center">
+                  <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
+                </div>
+              </form>
+            </div>
+
+
+          </div>
+
+        </div>
+    </section>
+    <!-- #contact -->
+
+  </main>
+
+
+
+  <!--==========================
+    Footer
+    ============================-->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+
+        <!--==========================
+      Footer
+      ============================-->
+        <footer id="footer">
+          <div class="footer-top">
             <div class="container">
-              <div class="copyright">
-                &copy; Copyright
-                <strong>inSite</strong>. All Rights Reserved
-              </div>
-              <div class="credits">
-                <!--
+
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="copyright">
+              &copy; Copyright
+              <strong>inSite</strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+              <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
         -->
-                Boostrap & inSite made Tampate
-              </div>
+              Boostrap & inSite made Tampate
             </div>
-          </footer>
-          <!-- #footer -->
+          </div>
+        </footer>
+        <!-- #footer -->
 
-          <a href="#" class="back-to-top">
-            <i class="fa fa-chevron-up"></i>
-          </a>
+        <a href="#" class="back-to-top">
+          <i class="fa fa-chevron-up"></i>
+        </a>
 
-          <!-- JavaScript Libraries -->
-          <script src="lib/jquery/jquery.min.js"></script>
-          <script src="lib/jquery/jquery-migrate.min.js"></script>
-          <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-          <script src="lib/easing/easing.min.js"></script>
-          <script async src="lib/wow/wow.min.js"></script>
-          <script async src="lib/waypoints/waypoints.min.js"></script>
-          <script async src="lib/counterup/counterup.min.js"></script>
-          <script async src="lib/superfish/hoverIntent.js"></script>
-          <script async src="lib/superfish/superfish.min.js"></script>
+        <!-- JavaScript Libraries -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+        <script src="lib/jquery/jquery.min.js"></script>
+        <script src="lib/jquery/jquery-migrate.min.js"></script>
+        <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="lib/easing/easing.min.js"></script>
+        <script async src="lib/wow/wow.min.js"></script>
+        <script async src="lib/waypoints/waypoints.min.js"></script>
+        <script async src="lib/counterup/counterup.min.js"></script>
+        <script async src="lib/superfish/hoverIntent.js"></script>
+        <script async src="lib/superfish/superfish.min.js"></script>
 
-          <!-- Contact Form JavaScript File -->
-          <script src="contactform/contactform.js"></script>
+        <!-- Contact Form JavaScript File -->
+        <script src="contactform/contactform.js"></script>
 
-          <!-- Template Main Javascript File -->
-          <script src="js/main.js"></script>
-          <!--Start of Tawk.to Script-->
-          <script type="text/javascript">
-            var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-            (function () {
-              var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-              s1.async = true;
-              s1.src = 'https://embed.tawk.to/5a98b722d7591465c7082c8c/default';
-              s1.charset = 'UTF-8';
-              s1.setAttribute('crossorigin', '*');
-              s0.parentNode.insertBefore(s1, s0);
-            })();
-          </script>
-          <!--End of Tawk.to Script-->
+        <!-- Template Main Javascript File -->
+        <script src="js/main.js"></script>
+        <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+        </script>
+        <script async src="js/google_map.js"></script>
 </body>
 
 </html>
