--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -119,7 +119,7 @@
               <a href="../blog">Blog</a>
             </li>
             <li>
-              <a href="../contact.html">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
         </ul>
       </nav>
@@ -205,70 +205,66 @@
     <!--==========================
       Services Section
       ============================-->
-    <section id="services">
+    <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">O que podemos fazer por você</h3>
-          <p class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
+          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
-        <div class="row">
-          <div class=".col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="box">
-              <div class="icon">
-                <a href="">
-                  <i class="fa fa-plug"></i>
-                </a>
-              </div>
-              <h4 class="title">
-                <a href="">Instalações Elétricas</a>
-              </h4>
-              <p class="description">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
+
+        <div class="card-group">
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-sun-o"></i>
+            <div class="card-body">
+              <h5 class="card-title">Placas Solares</h5>
+              <p class="card-text">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sistema de energia solar
+                fotovoltaico eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua
+                própria energia.</p>
+            </div>
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-plug icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Instalações Elétricas</h5>
+              <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
                 <a href="">Fale conosco</a>
               </p>
             </div>
           </div>
-          <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon">
-                <a href="">
-                  <i class="fa fa-sun-o"></i>
-                </a>
-              </div>
-              <h4 class="title">
-                <a href="">Placa solares</a>
-              </h4>
-              <p class="description">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sstema de eergia solar fotovoltaico
-                eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua própria energia
-                em casa.</p>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-line-chart icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Eficiência Energética</h5>
+              <p class="card-text">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
+                gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
+                utilizamos.
+              </p>
             </div>
           </div>
-          <center>
-            <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-              <div class="box">
-                <div class="icon">
-                  <a href="">
-                    <i class="fa fa-line-chart"></i>
-                  </a>
-                </div>
-                <h4 class="title">
-                  <a href="">Eficiência Energética</a>
-                </h4>
-                <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
-                  gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
-                  utilizamos.
-                </p>
-              </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-bolt icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Sistemas de Proteção a Descargas Atmosféricas</h5>
+              <p class="card-text">A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários! Fale conosco.
+                Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
+
+
+              </p>
             </div>
-          </center>
-
-
+          </div>
+          <div class="card icon-services">
+            <i style="font-size: 50px; text-align: center; margin: 35px;" class="fa fa-fire icon-services"></i>
+            <div class="card-body">
+              <h5 class="card-title">Termografia</h5>
+              <p class="card-text">Utilizamos uma câmera que mede temperatura para ver se há fuga de corrente ou sobrecaga em um cabo ou disjuntor,
+                para que façamos um lauro de instalações. Assim, evitaremos acidentes que podem ser perigosos.
+              </p>
+            </div>
+          </div>
         </div>
-
-      </div>
     </section>
     <!-- #services -->
-
     <!--==========================
     Call To Action Section
     ============================-->
@@ -295,69 +291,161 @@
 
 
 
+      <!--==========================
+      Contact Section
+      ============================-->
+      <section id="contact">
+        <div class="container wow fadeInUp">
+          <div class="section-header">
+            <h3 class="section-title">Contato</h3>
+            <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
+              em 24h no máximo</p>
+          </div>
+        </div>
+  
+  
+        <div class="container wow fadeInUp">
+          <div class="row justify-content-center">
+  
+            <div class="col-lg-3 col-md-4">
+  
+              <div class="info">
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p>
+                    <br> Brasília DF UnB SG-11 - AT 3/4
+                  </p>
+                </div>
+  
+                <div>
+                  <i class="fa fa-envelope"></i>
+                  <p>contato@enetec.unb.br</p>
+                </div>
+  
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>Telefone: (61) 3107-1036
+                    <br> Diretor de Comercial (Marcos) (61) 9 8165-7690
+                    <br>
+                  </p>
+                  <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561991033751&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp
+                    <br> clicando aqui
+                    <br>
+                  </a>
+                </div>
+              </div>
+  
+              <div style="position: relative; left: 22.5%;" class="social-links">
+                <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
+                  <i class="fa fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/enetec" class="instagram">
+                  <i class="fa fa-instagram"></i>
+                </a>
+                <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </div>
+  
+            </div>
+  
+            <div class="col-lg-5 col-md-8">
+              <div class="form">
+                <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
+                  <div class="form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
+                    />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!"
+                      placeholder="Digite aqui sua mensagem"></textarea>
+                    <div class="validation"></div>
+                  </div>
+                  <div class="text-center">
+                    <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
+                  </div>
+                </form>
+              </div>
+  
+  
+            </div>
+  
+          </div>
+      </section>
+      <!-- #contact -->
+  
+    </main>
+  
+  
+  
     <!--==========================
-    Footer
-    ============================-->
+      Footer
+      ============================-->
     <footer id="footer">
       <div class="footer-top">
         <div class="container">
-
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright
-          <strong>ENETEC</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
-          Boostrap & ENETEC made Tampate
-        </div>
-      </div>
-    </footer>
-    <!-- #footer -->
-
-    <a href="#" class="back-to-top">
-      <i class="fa fa-chevron-up"></i>
-    </a>
-
-    <!-- JavaScript Libraries -->
-    <script src="../lib/jquery/jquery.min.js"></script>
-    <script src="../lib/jquery/jquery-migrate.min.js"></script>
-    <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../lib/easing/easing.min.js"></script>
-    <script src="../lib/wow/wow.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
-
-    <script src="../lib/waypoints/waypoints.min.js"></script>
-    <script src="../lib/counterup/counterup.min.js"></script>
-    <script src="../lib/superfish/hoverIntent.js"></script>
-    <script src="../lib/superfish/superfish.min.js"></script>
-
-    <!-- Contact Form JavaScript File -->
-    <script src="../contactform/contactform.js"></script>
-
-    <!-- Template Main Javascript File -->
-    <script src="../js/main.js"></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-      (function () {
-        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = 'https://embed.tawk.to/5a98b722d7591465c7082c8c/default';
-        s1.charset = 'UTF-8';
-        s1.setAttribute('crossorigin', '*');
-        s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
+  
+          <!--==========================
+        Footer
+        ============================-->
+          <footer id="footer">
+            <div class="footer-top">
+              <div class="container">
+  
+              </div>
+            </div>
+  
+            <div class="container">
+              <div class="copyright">
+                &copy; Copyright
+                <strong>inSite</strong>. All Rights Reserved
+              </div>
+              <div class="credits">
+                <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
+          -->
+                Boostrap & inSite made Tampate
+              </div>
+            </div>
+          </footer>
+          <!-- #footer -->
+  
+          <a href="#" class="back-to-top">
+            <i class="fa fa-chevron-up"></i>
+          </a>
+  
+          <!-- JavaScript Libraries -->
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+          <script src="lib/jquery/jquery.min.js"></script>
+          <script src="lib/jquery/jquery-migrate.min.js"></script>
+          <script async src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+          <script src="lib/easing/easing.min.js"></script>
+          <script async src="lib/wow/wow.min.js"></script>
+          <script async src="lib/waypoints/waypoints.min.js"></script>
+          <script async src="lib/counterup/counterup.min.js"></script>
+          <script async src="lib/superfish/hoverIntent.js"></script>
+          <script async src="lib/superfish/superfish.min.js"></script>
+  
+          <!-- Contact Form JavaScript File -->
+          <script src="contactform/contactform.js"></script>
+  
+          <!-- Template Main Javascript File -->
+          <script src="js/main.js"></script>
+          <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+          </script>
+          <script async src="js/google_map.js"></script>
 </body>
 
 </html>
