--- a/eficiencia/quiz.html
+++ b/eficiencia/quiz.html
@@ -134,6 +134,17 @@
     Hero Section
     ============================-->
   <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
+    <div class="icons">
+        <a href="https://www.linkedin.com/company/enetec-consultoria/">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/enetec.consultoria/">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/enetec/">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
     <div class="hero-container">
       <img src="../img/logo-header.png">
       <h2> </h2>
@@ -153,6 +164,7 @@
       Contact Section
       ============================-->
     <section id="quiz" style="background: url(../img/lumi3.jpg) top center fixed;">
+
       <div class="bg-contact2" style="
     text-align: center;">
         <div class="container-contact2">
