--- a/index.html
+++ b/index.html
@@ -132,14 +132,26 @@
     Hero Section
     ============================-->
   <section id="hero">
+    <div class="icons">
+      <a href="https://www.linkedin.com/company/enetec-consultoria/">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/enetec.consultoria/">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/enetec/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="hero-container" style="text-align: left;">
 
       <h1 style="font-family: 'montserrat-medium', sans-serif">ENETEC
         <br> Consultoria Júnior</h1>
       <h2 style="font-family: 'montserrat-medium', sans-serif; color: white;">Você precisa de economia de energia? </h2>
 
-    </div>
+
   </section>
+  </div>
   <!-- #hero -->
 
   <main id="main">
