--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -132,6 +132,17 @@
     Hero Section
     ============================-->
   <section id="hero" style="background: url(../img/about-img3.jpg) top center fixed;">
+    <div class="icons">
+        <a href="https://www.linkedin.com/company/enetec-consultoria/">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/enetec.consultoria/">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/enetec/">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
     <div class="hero-container">
       <h1> Instalações Elétricas</h1>
       <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
