--- a/simulador/index.html
+++ b/simulador/index.html
@@ -136,6 +136,17 @@
     Hero Section
     ============================-->
   <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
+    <div class="icons">
+        <a href="https://www.linkedin.com/company/enetec-consultoria/">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/enetec.consultoria/">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/enetec/">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+      </div>
     <div class="hero-container">
       <img src="../img/logo-header.png">
       <h2> </h2>
